--- a/PJT.html
+++ b/PJT.html
@@ -216,7 +216,7 @@
           </nav>
 
           <section id="main" class="mt-4">
-            <div class="carousel slide" data-bs-ride="carousel" data-bs-intervel="2000">
+            <div class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
               <div class="carousel-inner">
                 <div class="carousel-item active">
                   <img src="slide1.jpg" class="d-block w-100" alt="Slide 1">
